if get_option('firmware-packager')
  install_data('firmware_packager.py',
               install_dir : 'share/fwupd')
  install_data('simple_client.py',
               install_dir : 'share/fwupd')
  install_data('add_capsule_header.py',
               install_dir : 'share/fwupd')
  install_data('install_dell_bios_exe.py',
               install_dir : 'share/fwupd')
endif
