install_data([
    '8bitdo-nes30pro.json',
    '8bitdo-sf30pro.json',
    '8bitdo-sfc30.json',
    'aiaiai-h05.json',
    'bizlink-no-sku-vli.json',
    'corsair-harpoon-rgb-wireless.json',
    'corsair-katar-pro-wireless.json',
    'corsair-katar-pro-xt.json',
    'corsair-sabre-pro.json',
    'dell-kh08p.json',
    'dell-wd19tb.json',
    'fwupd-a3bu-xplained.json',
    'fwupd-at90usbkey.json',
    'hp-dock-g5.json',
    'hughski-colorhug2.json',
    'hughski-colorhug.json',
    'hughski-colorhug-plus.json',
    'hyper-no-sku-vli.json',
    'jabra-speak-410.json',
    'jabra-speak-510.json',
    'jabra-speak-710.json',
    'lenovo-03x7168.json',
    'lenovo-03x7605.json',
    'lenovo-03x7608-vli.json',
    'lenovo-03x7609-cxaudio.json',
    'lenovo-40au0065-vli.json',
    'lenovo-GX90T33021-vli.json',
    'logitech-bolt-receiver.json',
    'logitech-k780.json',
    'logitech-m650.json',
    'logitech-m750.json',
    'logitech-mr0077.json',
    'logitech-rqr12.json',
    'logitech-rqr12-signed.json',
    'logitech-rqr24.json',
    'logitech-rqr24-signed.json',
    'nordic-hid-nrf52840-mcuboot.json',
    'realtek-rts5423.json',
    'realtek-rts5855.json',
    'synaptics-prometheus.json',
    'system76-thelio.json',
    'ugreen-cm260.json',
    'wacom-intuos-bt-m-bluetooth.json',
    'wacom-intuos-bt-m.json',
    'wacom-intuos-bt-m-main.json',
    'wacom-intuos-bt-s.json',
  ],
  install_dir: join_paths(datadir, 'fwupd', 'device-tests'),
)
