install_data([
    '8bitdo-nes30pro.json',
    '8bitdo-sf30pro.json',
    '8bitdo-sfc30.json',
    'acer-d501.json',
    'aiaiai-h05.json',
    'algoltek-ag9421.json',
    'analogix-anx7518.json',
    'aver-fone540.json',
    'bizlink-no-sku-vli.json',
    'caldigit-element.json',
    'caldigit-ts4.json',
    'caldigit-ts4-tbt.json',
    'corsair-katar-pro-xt.json',
    'corsair-sabre-pro.json',
    'corsair-sabre-rgb-pro.json',
    'dell-kh08p.json',
    'dell-wd19tb.json',
    'fpc-lenfy-moh.json',
    'fwupd-a3bu-xplained.json',
    'fwupd-at90usbkey.json',
    'google-servo-micro.json',
    'hp-910-bt-keyboard.json',
    'hp-910-bt-mouse.json',
    'hp-dock-g5.json',
    'huddly-s1.json',
    'hughski-colorhug2.json',
    'hughski-colorhug.json',
    'hughski-colorhug-plus.json',
    'hyper-no-sku-vli.json',
    'jabra-evolve2-75.json',
    'jabra-speak-410.json',
    'jabra-speak-510.json',
    'jabra-speak-710.json',
    'lenovo-03x7168.json',
    'lenovo-03x7605.json',
    'lenovo-03x7608-vli.json',
    'lenovo-03x7609-cxaudio.json',
    'lenovo-40au0065-vli.json',
    'lenovo-GX90T33021-vli.json',
    'logitech-bolt-receiver.json',
    'logitech-k780.json',
    'logitech-m650.json',
    'logitech-m750.json',
    'logitech-mr0077.json',
    'logitech-rqr12.json',
    'logitech-rqr12-signed.json',
    'logitech-rqr24.json',
    'logitech-rqr24-signed.json',
    'nordic-hid-nrf52840-mcuboot.json',
    'nordic-hid-nrf52840-b0.json',
    'parade-ps5512evb.json',
    'pixart-rf-2862-dongle.json',
    'pixart-rf-GCBBTM25.json',
    'qualcomm-qcc5171.json',
    'realtek-rts5423.json',
    'realtek-rts5855.json',
    'steelseries-aerox-3-wireless.json',
    'steelseries-rival-3-wireless.json',
    'synaptics-prometheus.json',
    'synaptics-vmm9430evb.json',
    'ugreen-cm260.json',
    'wacom-intuos-bt-m.json',
    'wacom-intuos-bt-s.json',
    'wistron-dock-40b7.json',
  ],
  install_dir: join_paths(datadir, 'fwupd', 'device-tests'),
)
